--- a/Main Dishes.html
+++ b/Main Dishes.html
@@ -17,17 +17,17 @@ Main Dishes</title>
 </ul>
 <div>
 <h1>Main Dishes</h1>
-<p id=yy title= 70SR>Chicken Kabsa </p>
-<p id=yy title= 85SR>Meat Kabsa </p>
-<p id=yy title= 50SR>Qursan </p>
-<p id=yy title= 45SR>Red Jareesh </p>
-<p id=yy title= 45SR>Jareesh </p>
-<p id=yy title= 60SR>Marquq </p>
-<p id=yy title= 75SR>Chicken Saleeq </p>
-<p id=yy title= 80SR>Meat Saleeq </p>
-<p id=yy title= 15SR>Molokhia </p>
-<p id=yy title= 40SR>Hamees </p>
-<p id=yy  title= 95SR>Mubahar Rice(Meat) </p>
+<p  title=70SR>Chicken Kabsa </p>
+<p  title= 85SR>Meat Kabsa </p>
+<p  title= 50SR>Qursan </p>
+<p  title= 45SR>Red Jareesh </p>
+<p  title= 45SR>Jareesh </p>
+<p  title= 60SR>Marquq </p>
+<p  title= 75SR>Chicken Saleeq </p>
+<p title= 80SR>Meat Saleeq </p>
+<p  title= 15SR>Molokhia </p>
+<p  title= 40SR>Hamees </p>
+<p  title= 95SR>Mubahar Rice(Meat) </p>
 <button class ='button button1'
 type=button onclick="ss()">NEXT</button>
 <button class ='button button1'
